# xrexpr

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml  setup.py  versioneer.py
.github/workflows/: cd.yml  ci.yml
ci/: environment.yml
docs/: improvement-report.md  indexer-follow-ups.md  pr-plan.md  structural-dispatch-2.md  structural-dispatch-discussion.md  structural-dispatch.md
docs/roadmap/: 00-assessment.md  01-grouped-barrier.md  02-chunk-taxonomy.md  03-elementwise.md  04-scan-dims.md  05-grouped-contexts.md  06-small-wins.md  07-rust-gate.md
src/xrexpr/: __init__.py  _version.py  accessor.py  cst.py  decorators.py  exceptions.py  indexers.py  ir.py  operations.py  optimize.py  schema.py
tests/: conftest.py  test_accessor.py  test_indexers.py  test_ir.py  test_operations.py  test_optimize.py  test_properties.py  test_pushdown.py  test_schema.py  test_to_opnode.py
